# Katagents

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sample-leads.csv
.github/workflows/: ci.yml
apps/api/: Dockerfile  config.py  database.py  dependencies.py  main.py  pyproject.toml
apps/api/agents/: base.py  engine.py  registry.py
apps/api/agents/email_outreach/: agent.py  schemas.py
apps/api/agents/email_outreach/steps/: approval.py  follow_up.py  generate.py  lead_manager.py  research.py  send.py
apps/api/api/v1/: agents.py  analytics.py  auth.py  campaigns.py  drafts.py  emails.py  leads.py  organizations.py  router.py
apps/api/api/v1/webhooks/: resend.py
apps/api/core/: audit.py  rate_limit.py  rbac.py  redis.py  security.py
apps/api/entrypoints/: scheduler.py  worker.py
apps/api/jobs/: follow_up_jobs.py  tasks.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 001_initial_schema.py
apps/api/models/: __init__.py  agent.py  analytics.py  base.py  campaign.py  email.py  user.py
apps/api/schemas/: agent.py  analytics.py  auth.py  campaign.py  email.py
apps/api/services/: shared.py
apps/api/services/analytics/: analytics_service.py
apps/api/services/approval/: approval_service.py
apps/api/services/email/: resend_service.py
apps/api/services/llm/: provider.py
apps/api/services/research/: research_service.py
apps/api/services/scheduler/: scheduler_service.py
apps/web/: package.json  (+1 more)
docs/: SUPABASE.md
scripts/: setup-local-db.sh
supabase/: config.toml
(+41 files in other folders)
